# basictools-frozen

./: .clang-format  .gitignore  .gitlab-ci-rosetta.yml  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.md  ChangeLog.txt  LICENSE.txt  README.md  README.txt  __init__.py  conftest.py  pytest.ini  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml  python-publish.yml  test_python.yml
Actions/: OpenInParaView.py  OpenInParaview.py
Containers/: ConstantRectilinearMesh.py  ConstantRectilinearMeshTools.py  ElementNames.py  Filters.py  MeshBase.py  MeshTools.py  Octree.py  SymExpr.py  UnstructuredMesh.py  UnstructuredMeshTools.py  __init__.py  vtkBridge.py
Extras/: BasicToolsParaViewBridge.py
FE/: ConstantRectilinearFea.py  ConstantRectilinearMesh.py  DofNumbering.py  EigenSolver.pyx  ElementBuildier.py  ElementNames.py  FETools.py  FElement.py  FeaBase.py  FemHelp.py  Hexa8.py  Hexa8Cuboid.py  Integration.py  IntegrationsRules.py  LinearSolver.py  MaterialHelp.py  MeshBase.py  MeshTools.py  NativeIntegration.pyx  Octree.py  ProblemData.py  PythonIntegration.py  Quad4Rectangle.py  StructuredMesh.py  SymPhysics.py  Tri3.py  UnstructuredFea.py  UnstructuredFeaSym.py  UnstructuredMesh.py  UnstructuredMeshTools.py  WeakForm.py  WeakFormNumerical.pyx  WeakFormNumericalWrapper.pxd  ZmatFemProblem.py  __init__.py
FE/Behaviours/: UmatInterface.py  ZMatLinearMaterials.py  __init__.py
FE/Fields/: ConstantField.py  FEField.py  IntegrationPointField.py  NodalField.py  __init__.py
FE/KR/: KRBase.py  KRBlock.py  KRMasterSlaves.py  __init__.py
FE/Spaces/: BarSpaces.py  FESpaces.py  HexaSpaces.py  PointSpaces.py  QuadSpaces.py  SymSpace.py  TetSpaces.py  TriSpaces.py  __init__.py
FE/src_cpp/: Eigentype.h  NativeEigenSolvers.h  NativeIntegration.cpp  NativeIntegration.h  WeakFormNumerical.h
Helpers/: .coverage  BaseOutputObject.py  CPU.py  Factory.py  GlobalFunctions.py  ParserHelper.py  PrintBypass.py  ProgressBar.py  Tests.py  TextFormatHelper.py  Timer.py  __init__.py  which.py
IO/: AscReader.py  CodeInterface.py  CsvWriter.py  FemReader.py  GReader.py  GeoReader.py  GeofReader.py  GeofWriter.py  GmshReader.py  GmshWriter.py  IOFactory.py  InpReader.py  InputFile.py  JsonReader.py  MeshFileConverter.py  MeshReader.py  MeshTools.py  MeshWriter.py  OdbReader.py  OdbWriter.py  PathControler.py  PickleTools.py  PostReader.py  ProcastResultReader.py  ReaderBase.py  SamcefReader.py  StlReader.py  StlWriter.py  UniversalReader.py  UniversalWriter.py  UtReader.py  UtWriter.py  VtuReader.py  Wormhole.py  WriterBase.py  XdmfReader.py  XdmfTools.py  XdmfWriter.py  ZebulonIO.py  ZsetElementAlmanac.py  (+2 more)
IO/CodeInterfaceFiles/: template.tpl
IO/CodeInterfaceFiles/Temp/: calcul1.msg
IO/ParaViewBridge/: CMakeLists.txt  UniversalReader.py  UniversalReader.xml.in  UniversalReaderExt.txt  UniversalReaderRequest.py  UniversalWriter.py  UniversalWriter.xml.in  escapexmlstring.py
IO/Parallel/: UtMerger.py  UtSplitter.py  __init__.py
Linalg/: ConstraintsHolder.py  LinearSolver.py  MatOperations.py  __init__.py
Numerical/: GappyPod.py  GramSchmidt.py  MatrixOperations.py  Pod.py  SVD.py  __init__.py
Numerical/test/: test_gappy_pod.py  test_pod.py
T/: Formats.py  __init__.py
TestData/: GCodeTest.gcode  calcul2.inp  calcul3.inp  cube.inp  mat  mesh1.msh  tab1.inp  test.py
TestData/UtExample/: cube.ctnod  cube.node  cube.ut  toto.ctnod  toto.geof  toto.node  toto.ut
TestData/UtParExample/: cube-001.node  cube.node
cpp_generators/: ElementNameGenerator.py  IntegrationRuleGenerator.py  SpaceGenerator.py  Tools.py
cpp_src/Containers/: ElementFilter.cpp  ElementFilter.h  ElementNames.h  ElementUtilities.h  FieldTransfer.cpp  FieldTransfer.h  Tags.cpp  Tags.h  Tags.hpp  UnstructuredMesh.cpp  UnstructuredMesh.h  UnstructuredMesh.hpp  UnstructuredMeshTools.cpp  UnstructuredMeshTools.h
cpp_src/FE/: DofNumbering.cpp  DofNumbering.h  IntegrationRule.h  NativeIntegration.cpp  NativeIntegration.h  NativeNumericalWeakForm.cpp  NativeNumericalWeakForm.h  Space.cpp  Space.h
cpp_src/Helpers/: SetGetMacros.h  ToString.h
cpp_src/ImplicitGeometry/: ImplicitGeometryBase.cpp  ImplicitGeometryBase.h
cpp_src/LinAlg/: BasicOperations.cpp  BasicOperations.h  EigenSolvers.h  EigenTools.cpp  EigenTools.h  EigenTypes.h  NativeEigenSolvers.h
docs/: Admin.rst  BasicToolsCpp.rst  Containers.rst  Doxyfile  Examples.rst  Intro.rst  Kinematics.rst  License.rst  Makefile  MeshFileConverter.rst  ParaViewAndOthersExternalTools.rst  Utilities.rst  conf.py  environment_readthedocs.yml  index.rst  make.bat
docs/Examples/: .gitignore  PrePostDeepLearning.py  PrePostDeepLearning.rst  PrePostDeepLearning_Input.xmf  TwoInclusions.msh  TwoInclusions.py  TwoInclusions.rst  WriteXdmf.py  WriteXdmf.rst
docs/JossPaper/: README.md  codemeta.json  paper.bib  paper.md
docs/_static/: my_theme.css
docs/cpp_doc/: Containers.rst  FE.rst  Helpers.rst  ImplicitGeometry.rst  LinAlg.rst
extras/: BasicToolsParaViewBridge.py  __init__.py
recepie/: bld.bat  build.sh  meta.yaml
recepie/compiled/: bld.bat  meta.yaml
recepie/noarch/: bld.bat  meta.yaml
recipes/compiled/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
recipes/noarch/: bld.bat  build.sh  meta.yaml
src/BasicTools/: CythonDefs.pxd  NumpyDefs.py  __init__.py
src/BasicTools/Actions/: OpenInParaView.py  __init__.py
src/BasicTools/Bridges/: CGNSBridge.py  MeshIOBridge.py  PyVistaBridge.py  __init__.py  vtkBridge.py
src/BasicTools/Containers/: ConstantRectilinearMesh.py  ConstantRectilinearMeshTools.py  ElementNames.py  Filters.py  FiltersTools.py  MeshBase.py  MeshIOBridge.py  MeshTools.py  NativeFilters.pxd  NativeFilters.pyx  NativeTransfer.pxd  NativeTransfer.pyx  NativeUnstructuredMesh.pxd  NativeUnstructuredMesh.pyx  Octree.py  PyVistaBridge.py  SymExpr.py  Tags.py  UnstructuredMesh.py  UnstructuredMeshCreationTools.py  UnstructuredMeshFieldOperations.py  UnstructuredMeshGraphTools.py  UnstructuredMeshInspectionTools.py  UnstructuredMeshMappingTools.py  UnstructuredMeshModificationTools.py  UnstructuredMeshTools.py  __init__.py  (+1 more)
(+196 files in other folders)
