# -*- coding: utf-8 -*-
#
# This file is subject to the terms and conditions defined in
# file 'LICENSE.txt', which is part of this source code package.
#
#

[metadata]
name = BasicTools
version = 1.6
url = https://gitlab.com/drti/basic-tools
author = Safran
license = BSD 3-Clause License
license_files =
    LICENSE.txt
    CONTRIBUTING.md
description = Tools for finite element computations
long_description = Tools for finite element computations
platform = Linux

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    numpy
    scipy
    sympy
    pyparsing
    vtk
    h5py
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

#[options.entry_points]
#console_scripts =
#    MeshFileConvert = BasicTools.IO.MeshFileConverter:Main

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[build_ext]
debug = False
force = True