# -*- coding: utf-8 -*-
#
# This file is subject to the terms and conditions defined in
# file 'LICENSE.txt', which is part of this source code package.
#
#

[metadata]
name = BasicToolsFrozen
version = 1.9.12
url = https://github.com/basileMarchand/basictools-frozen
author = Basile Marchand
license = BSD 3-Clause License
license_files =
    LICENSE.txt
    CONTRIBUTING.md
description = Tools for finite element computations - fork for pymicro 
long_description = Tools for finite element computations - fork for pymicro 
platform = Linux

[options]
zip_safe = False
python_requires = >3.7
# I think this is inconpatible with pip *
#https://stackoverflow.com/questions/27307082/install-package-which-has-setup-requires-from-local-source-distributions
#setup_requires =
#    numpy >=1.20
#    cython
#    sympy
#    eigency >= 2
#    mkl
#    mkl-include
install_requires =
    numpy >=1.20
    scipy >=1.9
    sympy
    vtk
    psutil

    h5py
    meshio
    pyvista
    networkx >=3
    pytest
    sphinx
    sphinx_rtd_theme

package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src
include = BasicTools*
#[options.entry_points]
#console_scripts =
#    MeshFileConvert = BasicTools.IO.MeshFileConverter:Main

[build_sphinx]
source-dir = docs
build-dir = docs/_build